--- a/packages/ckeditor5-build-inline/package.json
+++ b/packages/ckeditor5-build-inline/package.json
@@ -35,6 +35,7 @@
     "@ckeditor/ckeditor5-easy-image": "^34.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^34.0.0",
     "@ckeditor/ckeditor5-essentials": "^34.0.0",
+    "@ckeditor/ckeditor5-font": "^34.1.0",
     "@ckeditor/ckeditor5-heading": "^34.0.0",
     "@ckeditor/ckeditor5-image": "^34.0.0",
     "@ckeditor/ckeditor5-indent": "^34.0.0",
@@ -51,6 +52,7 @@
     "@ckeditor/ckeditor5-dev-utils": "^30.0.0",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^34.0.0",
+    "ckeditor5-math": "^34.0.0",
     "css-loader": "^5.2.7",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.1",
