--- a/packages/ckeditor5-build-inline/package.json
+++ b/packages/ckeditor5-build-inline/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ckeditor/ckeditor5-build-inline",
+  "name": "ckeditor-custom-build",
   "version": "34.0.0",
   "description": "The inline editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
